src/App.css
@import "tailwindcss";

:root,
body,
body > * {
    height: 100%;
}

.entry-content-grid {
    display: grid;
    min-height: 0;
    grid-template-rows: 1fr min-content;
    grid-template-columns: min-content 1fr;
    &[data-mode="edit"] {
        grid-template-areas:
            "sidebar editor"
            "sidebar bottom"
        ;
        @media screen and (min-width: 1080px) {
            grid-template-areas:
                "sidebar editor"
                "sidebar bottom"
            ;
        }
    }
    &[data-mode="view"] {
        grid-template-rows: 1fr;
        grid-template-columns: min-content 1fr;
        grid-template-areas:
            "sidebar viewer"
        ;
    }

    &[data-mode="view-edit"] {
        grid-template-rows: 1fr 0 1fr min-content;
        grid-template-columns: min-content 1fr min-content 1fr;
        grid-template-areas:
            "sidebar editor editor editor"
            "sidebar divider divider divider"
            "sidebar viewer viewer viewer"
            "sidebar bottom bottom bottom"
        ;
        @media screen and (min-width: 1080px) {
            grid-template-areas:
                "sidebar viewer divider editor"
                "sidebar viewer divider editor"
                "sidebar viewer divider editor"
                "sidebar bottom bottom  bottom"
            ;
        }
    }


    > *[data-grid-area="sidebar"] {
        grid-area: sidebar;
    }
    > *[data-grid-area="viewer"] {
        grid-area: viewer;
    }
    > *[data-grid-area="editor"] {
        grid-area: editor;
    }
    > *[data-grid-area="divider"] {
        grid-area: divider;
    }
    > *[data-grid-area="bottom"] {
        grid-area: bottom;
    }
}

